[package]
authors = ["Christopher Brickley <brickley@gmail.com>"]
description = "A rust crate for sending messages to Slack via webhooks."
homepage = "https://github.com/frostly/rust-slack"
keywords = ["slack", "webhook", "hook", "messaging"]
license = "MIT/Apache-2.0"
name = "slack-hook"
readme = "README.md"
repository = "https://github.com/frostly/rust-slack"
version = "0.8.1"
edition = "2021"

[dependencies]
chrono     = "0.4"
reqwest    = { version = "0.11", features = ["json"] }
hex        = "0.4"
thiserror  = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
url        = { version = "2", features = ["serde"] }
